重置完善 ShortID工具函数

--- a/开发文档.md
+++ b/开发文档.md
@@ -48,3 +48,7 @@ pnpm add snakecase-keys
 # 下划线转驼峰
 pnpm add camelcase-keys
 ```
+
+### 生成随机字符串
+1. 生成三十二位字符串
+`node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"`
