继续完善文章相关接口

--- a/开发文档.md
+++ b/开发文档.md
@@ -52,3 +52,47 @@ pnpm add camelcase-keys
 ### 生成随机字符串
 1. 生成三十二位字符串
 `node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"`
+
+
+### 对数组里的每个元素执行异步函数，同时可以控制并发数，防止同时跑太多导致内存或网络崩掉。
+1. 安装依赖
+```bash
+pnpm add p-map
+```
+2. 使用
+```typescript
+import pMap from 'p-map';
+
+const moved = await pMap(
+  tempPaths,
+  async (tempPath: string) => {
+    try {
+      const movedPath = await ImageService.moveToFormalDir(tempPath, scene);
+      return movedPath;
+    } catch (error) {
+      throw error;
+    }
+  },
+  { concurrency }
+);
+```
+
+### 开启meilisearch服务
+1. 安装依赖
+```bash
+pnpm add meilisearch
+```
+2. 创建meilisearch.ts
+3. 启动服务
+```bash
+# 前台启动
+alias meili-start='./meilisearch --http-addr 127.0.0.1:7700'
+# 后台启动（brew services）
+alias meili-start-bg='brew services start meilisearch'
+# 停止服务
+alias meili-stop='brew services stop meilisearch'
+# 查看服务状态
+alias meili-status='brew services list | grep meilisearch'
+# 健康检查
+alias meili-health='curl http://127.0.0.1:7700/health'
+```
